Elementary applicant form (Frontend)
All the HTML(jsx) elements needed, basic interactions, main.css for tests.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build:dist": "webpack -p",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack-dev-server --open --hot --inline",
     "watch": "webpack --watch"
   }
 }
