--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "decadegraphy",
-  "dependencies": {},
+  "dependencies": {
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
