--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "version": "0.0.1",
   "name": "decadegraphy",
-  "dependencies": {
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2"
-  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -20,10 +15,14 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "moment": "^2.18.1",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-bundle-tracker": "^0.2.0",
     "webpack-dev-server": "^2.6.1"
