--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
