Move stepIndex into Redux
Also:
- Update .gitignore
- Ignore lib/python3.6/site-packages

--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,11 @@ staticfiles/
 # webpack-log
 webpack-stats.json
 
+# Python venv
 bin/
 pyvenv.cfg
+lib/python*/site-packages
+/pip-selfcheck.json
+
+# Webpack static bundles
+/decadegraphy/static/webpack_bundles/*
