--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "google-libphonenumber": "^3.0.5",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
@@ -28,14 +36,5 @@
     "build:dist": "webpack -p",
     "start:dev": "webpack-dev-server --open --hot --inline",
     "watch": "webpack --watch"
-  },
-  "dependencies": {
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "moment": "^2.18.1"
   }
 }
