--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "version": "0.0.1",
   "name": "decadegraphy",
   "devDependencies": {
+    "antd": "^2.13.5",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.4.1",
@@ -19,8 +20,8 @@
     "google-libphonenumber": "^3.0.5",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
