--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "cloudinary-react": "^1.0.6",
     "css-loader": "^0.28.4",
     "eslint": "^4.4.1",
     "eslint-config-standard": "^10.2.1",
@@ -18,6 +19,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "google-libphonenumber": "^3.0.5",
+    "infinite-scroll": "^3.0.4",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
@@ -31,8 +33,7 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-bundle-tracker": "^0.2.0",
-    "webpack-dev-server": "^2.6.1",
-    "cloudinary-react": "^1.0.6"
+    "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
     "build:dist": "webpack -p",
